--- a/dshop/templates/dshop/products/catalog-product-media.html
+++ b/dshop/templates/dshop/products/catalog-product-media.html
@@ -1,4 +1,3 @@
 {% load thumbnail %}
-{% thumbnail product.sample_image 244x244 crop as thumb %}
-{% thumbnail product.sample_image 488x488 crop as thumb2 %}
-<img class="img-fluid" src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
+{% thumbnail product.sample_image 244x244 background="#ffffff" upscale as thumb %}
+<img class="img-fluid" src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="" />
