--- a/dshop/templates/dshop/products/dropdown-product-media.html
+++ b/dshop/templates/dshop/products/dropdown-product-media.html
@@ -2,8 +2,7 @@
 {% load thumbnail %}
 {% block sample-image %}
     {% if product.sample_image %}
-        {% thumbnail product.sample_image 50x50 crop as thumb %}
-        {% thumbnail product.sample_image 100x100 crop as thumb2 %}
-        <img class="mr-1" width="{{ thumb.width }}" height="{{ thumb.height }}" src="{{ thumb.url }}" srcset="{{ thumb.url }} 1x, {{ thumb2.url }} 2x" />
+        {% thumbnail product.sample_image 50x50 background="#ffffff" upscale as thumb %}
+        <img class="mr-1" src="{{ thumb.url }}" alt="" />
     {% endif %}
 {% endblock %}
