--- a/dshop/templates/dshop/products/print-image.html
+++ b/dshop/templates/dshop/products/print-image.html
@@ -1,3 +1,3 @@
 {% load thumbnail %}
-{% thumbnail product.sample_image 320x320 crop as thumb %}{# 4x subsampled for higher printers resolution #}
+{% thumbnail product.sample_image 320x320 background="#ffffff" upscale as thumb %}
 <img class="mr-3" width="80" height="80" src="{{ thumb.url }}" />
