--- a/dshop/templates/theme/default/pages/produits.html
+++ b/dshop/templates/theme/default/pages/produits.html
@@ -107,13 +107,13 @@
                   <div class="product_img">
                     <a href="{{product.get_absolute_url}}">
                       {% if product.main_image %}
-                        {% thumbnail product.main_image 540x600 crop upscale as thumb %}
+                        {% thumbnail product.main_image 540x600 background="#ffffff" upscale as thumb %}
                         <img src="{{thumb.url}}" alt="{{product.product_name}}">
                       {% elif product.images.first %}
-                        {% thumbnail product.images.first 540x600 crop upscale as thumb %}
+                        {% thumbnail product.images.first 540x600 background="#ffffff" upscale as thumb %}
                         <img src="{{thumb.url}}" alt="{{product.product_name}}">
                       {% else %}
-                        <img src="{% static 'dshop/shopwise/images/product_img1.jpg' %}" alt="{{product.product_name}}">
+                        <img src="https://via.placeholder.com/540x600/f7f8fb/f7f8fb" alt="{{product.product_name}}">
                       {% endif %}
                     </a>
                     <div class="product_action_box">
