--- a/dshop/templates/theme/default/pages/contact.html
+++ b/dshop/templates/theme/default/pages/contact.html
@@ -1,7 +1,7 @@
 {% extends "theme/default/pages/base.html" %}
 {% load static cms_tags i18n sekizai_tags dshop_tags %}
 
-{% block title %}{% page_attribute "page_title" %} - Diamond{% endblock %}
+{% block title %}{% page_attribute "page_title" %}{% endblock %}
 
 {% block main-content %}
 {% dm_get_site_contacts as contacts %}
