--- a/dshop/templates/theme/default/catalog/productvariable-detail.html
+++ b/dshop/templates/theme/default/catalog/productvariable-detail.html
@@ -198,7 +198,11 @@
                             <li><a href="{{related.get_absolute_url}}"><i class="ti-info-alt"></i></a></li>
                             {% if not related.variants and related.quantity > 0 %}
                                 <li>
-                                    <a href="/" class="btn" onclick="dm_add2cart($(this)); return false" data-product="{{related.slug}}"><i class="icon-basket-loaded"></i></a>
+                                    <a href="/" onclick="dm_add2cart($(this)); return false" data-product="{{related.slug}}"><i class="icon-basket-loaded"></i></a>
+                                </li>
+                            {% elif related.variants and related.variants.count == 1 %}
+                                <li>
+                                    <a href="/" onclick="dm_add2cart_variant($(this)); return false" data-product="{{related.slug}}" data-variant="{{related.variants.first.product_code}}"><i class="icon-basket-loaded"></i></a>
                                 </li>
                             {% endif %}
                             </ul>
